[project]
name = "mbmux"
description = "Software multiplexer of Modbus TCP and RTU"
version = "1.0.2"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "pymodbus[serial] >= 3.0.2",
    # "tomlconfig @ git+https://github.com/JurajMarcin/tomlconfig.git@1.1.2",
]

[project.scripts]
mbmux = "mbmux:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mbmux"]
